--- a/assets/style.css
+++ b/assets/style.css
@@ -14,16 +14,15 @@ header {
 h1, h2, p {
     text-align: center;
 }
-/* p {
-    text-align: center;
-} */
 
 .timer-text {
     text-align: right;
 }
-#btn.start {
+
+#start {
     justify-content: center;
 }
+
 #timer-count {
     text-align: right;
 }
