--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,7 @@ li {
     padding: 3px;
     margin: 8px;
     list-style: none;
+    align-content: center;
 }
 
 .score-count {
@@ -53,6 +54,7 @@ li {
     text-align: right;
     
 }
+
 
 
 
