added div to try and show high scores, made notes on what I think the next steps MIGHT be

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,11 @@ li {
     display: none;
 }
 
+.high-scores-container {
+    display: none;
+    height: 100%;
+}  
+
 #timer-count {
     text-align: right;
     
